src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GL14C_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GL14C_StringErrorContext.class */
public final class GL14C_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlendColor(FFFF)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glBlendEquation(I)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("nglMultiDrawArrays(IJJI)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glMultiDrawArrays(ILjava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("nglMultiDrawElements(IJIJI)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glMultiDrawElements(ILjava/nio/IntBuffer;ILorg/lwjgl/PointerBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glPointParameterf(IF)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glPointParameteri(II)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("nglPointParameterfv(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glPointParameterfv(ILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("nglPointParameteriv(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glPointParameteriv(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glBlendFuncSeparate(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glMultiDrawArrays(I[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glMultiDrawElements(I[IILorg/lwjgl/PointerBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glPointParameterfv(I[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        methods.put("glPointParameteriv(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/GL14CErrorContext");
        return methods;
    }
}
